# nte_patcher

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  rust.yml
docs/superpowers/plans/: 2026-05-02-architecture-refactoring-plan.md  2026-05-02-dx-testing-plan.md  2026-05-02-performance-mmap-plan.md
docs/superpowers/specs/: 2026-05-02-architecture-refactoring-design.md  2026-05-02-dx-testing-design.md  2026-05-02-performance-mmap-design.md
src/: cas.rs  config.rs  crypto.rs  download.rs  error.rs  lib.rs  manager.rs  mmap.rs  model.rs  parser.rs  retry.rs  unzip.rs  verify.rs
src/crypto/: aes.rs  archive.rs  mod.rs
src/downloader/: worker.rs
src/parser/: manifest.rs
tests/: test_aes.py  test_aes.rs  test_archive.rs  test_integration.rs  test_unpack.rs
