[package]
name = "nte_patcher"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.9.0"
cbc = { version = "0.2.0", features = ["alloc"] }
cipher = "0.5.1"
flate2 = "1.1.9"
futures-util = "0.3.32"
reqwest = { version = "0.13.2", features = ["stream"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }
