[package]
name = "nte_patcher"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.9.0"
cbc = { version = "0.2.0", features = ["alloc"] }
cipher = "0.5.1"
flate2 = "1.1.9"
futures-util = "0.3.32"
hex = "0.4.3"
md-5 = "0.11.0"
quick-xml = { version = "0.39.2", features = ["serialize"] }
reqwest = { version = "0.13.2", features = ["blocking", "stream"] }
semver = { version = "1.0.28", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }
